Business Hours Widget, fixed Journal CSS covering menu

--- a/themes/red-inhabitent/sass/_content.scss
+++ b/themes/red-inhabitent/sass/_content.scss
@@ -140,6 +140,8 @@
 }
 
 .about-body {
+	margin-left: auto;
+	margin-right: auto;
 	width: 1120px;
 }
 
@@ -219,8 +221,9 @@ footer {
 	}
 }
 
-article .entry-header {
+.blog article .entry-header {
 	position: relative;	
+	margin-top: 50px; //fix covering nav bar
 	line-height: 0;
 	a {
 		text-decoration: none;
@@ -252,8 +255,14 @@ article .entry-header {
 		position: absolute;
 		bottom: 0;
 		right: 0;
-		padding: 1rem 1rem;
+		padding: 0.75rem 1.5rem;
 		text-transform: uppercase;
 		line-height: 1;
 	}
+}
+.blog .site-main a.read-entry {
+	color: #000;
+	font-size: 0.75rem;
+	border: 1px solid #000;
+	padding: .75rem 1.5rem;
 }
