--- a/themes/red-inhabitent/style.css
+++ b/themes/red-inhabitent/style.css
@@ -681,6 +681,8 @@ a {
   text-transform: uppercase; }
 
 .about-body {
+  margin-left: auto;
+  margin-right: auto;
   width: 1120px; }
 
 .page-template-about .entry-content {
@@ -741,18 +743,19 @@ footer {
     padding-right: 5%;
     border-right: 1px solid #e1e1e1; }
 
-article .entry-header {
+.blog article .entry-header {
   position: relative;
+  margin-top: 50px;
   line-height: 0; }
-  article .entry-header a {
+  .blog article .entry-header a {
     text-decoration: none;
     color: #fff; }
-  article .entry-header a:visited {
+  .blog article .entry-header a:visited {
     color: #fff; }
-  article .entry-header img {
+  .blog article .entry-header img {
     width: 100%;
     height: auto; }
-  article .entry-header h2 {
+  .blog article .entry-header h2 {
     background-color: #248a83;
     color: #fff;
     position: absolute;
@@ -764,15 +767,21 @@ article .entry-header {
     font-size: 2rem;
     text-transform: uppercase;
     line-height: 1.25; }
-  article .entry-header .entry-meta {
+  .blog article .entry-header .entry-meta {
     background-color: #248a83;
     color: #fff;
     position: absolute;
     bottom: 0;
     right: 0;
-    padding: 1rem 1rem;
+    padding: 0.75rem 1.5rem;
     text-transform: uppercase;
     line-height: 1; }
+
+.blog .site-main a.read-entry {
+  color: #000;
+  font-size: 0.75rem;
+  border: 1px solid #000;
+  padding: .75rem 1.5rem; }
 
 /*--------------------------------------------------------------
 # Media
